--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fantaconclave-server",
+  "name": "FANTAEUROVISION25-server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "Fantaconclave application server",
+  "description": "FANTAEUROVISION25 application server",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
