--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.21.2",
     "firebase-admin": "^13.2.0",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.6.0",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "xlsx": "^0.18.5"
