--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "dev":   "cross-env NODE_ENV=development PORT=3000 node index.js",
+    "start": "cross-env NODE_ENV=production  PORT=80   node index.js",
     "lint": "eslint . --ext .js",
     "prepare": "husky install",
     "format": "prettier --write ."
@@ -28,6 +28,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^10.1.5",
